# fjt_old

./: README.md  fjt.desktop  install.sh  pyproject.toml  ui.sh
fjt/: __main__.py  anime.py  log.py  main_window.py  model.py  old_log.py  stats.py
fjt/ui/: main_window.py
ui/: main_window.ui
