[tool.poetry]
name = "fjt"
version = "0.1.0"
description = "CLI program for immersion tracking"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
appdirs = "^1.4.4"
typer = {extras = ["all"], version = "^0.9.0"}
simple-term-menu = "^1.6.1"
peewee = "^3.16.2"
pytube = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
python-lsp-black = "^1.3.0"
python-lsp-isort = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fjt = "fjt.__main__:main"
