[tool.poetry]
name = "fjt"
version = "0.1.0"
description = "\"immersion-bot\" log command helper"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
appdirs = "^1.4.4"
peewee = "^3.16.2"
pyside6 = "^6.5.2"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
python-lsp-black = "^1.3.0"
python-lsp-isort = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fjt = "fjt.__main__:main"
